# nailsage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  docker-entrypoint.sh  healthcheck.py  pyproject.toml  pytest.ini
.claude/: DECISIONS.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_CONTEXT.md  STATUS.md
api/: __init__.py  config.py  dependencies.py  main.py  server.py
api/middleware/: __init__.py  error_handler.py  logging.py
api/routers/: __init__.py  arenas.py  candles.py  health.py  models.py  portfolio.py  positions.py  stats.py  strategies.py  trades.py
api/schemas/: __init__.py  arenas.py  common.py  models.py  portfolio.py  positions.py  stats.py  strategies.py  trades.py  websocket.py
api/services/: __init__.py  arena_service.py  model_service.py  portfolio_service.py  position_service.py  stats_service.py  strategy_service.py  trade_service.py
api/websocket/: __init__.py  events.py  handlers.py  kirby_bridge.py  manager.py  poller.py  streams.py
config/: __init__.py  backtest.py  base.py  data.py  feature.py  paper_trading.py  risk.py  strategy.py
configs/: backtest_default.yaml  btc_spot_short_term.yaml  risk_default.yaml
configs/strategies/: dev_scalper_1m_v1.yaml  mean_reversion_v1.yaml  momentum_classifier_v1.yaml  momentum_classifier_v1_lookahead4.yaml  momentum_classifier_v1_weighted_lookahead4.yaml  momentum_classifier_v2_lightgbm.yaml  momentum_classifier_v2_randomforest.yaml  sol_scalper_15m_v1.yaml  sol_scalper_15m_v2.yaml  sol_swing_classifier_v1.yaml  sol_swing_momentum_v1.yaml  sol_swing_v2_lightgbm.yaml  sol_volatility_regime_adaptive_v1.yaml  sol_volatility_regime_adaptive_v2.yaml  sol_volatility_regime_adaptive_v3.yaml  trend_follower_v1.yaml
data/: __init__.py  generate_metadata.py  loader.py  metadata.py  schemas.py  validator.py
docs/: ACTIVE_FILES.md  API.md  DATABASE.md  DECISIONS.md  DOCKER.md  FEATURE_SCHEMA_USAGE.md  IMPLEMENTATION_CHECKLIST.md  MODEL_TRAINING.md  PROJECT_CONTEXT.md  README.md  SOL_PAPER_TRADING_GUIDE.md  STATUS.md  STRATEGY_GUIDE.md  WEBSOCKET.md
docs/deprecated/: PHASE_10_FEATURES.md  SOL_PAPER_TRADING_GUIDE.md  STRATEGY_GUIDE.md
execution/: README.md  __init__.py
execution/cli/: check_paper_trading_stats.py  debug_kirby_messages.py  run_multi_strategy.py  test_signal_save.py  test_websocket_integration.py
execution/inference/: __init__.py  predictor.py  signal_generator.py
execution/persistence/: schema.postgres.sql  schema.sql  state_manager.py  state_manager_sqlalchemy.py
execution/portfolio/: __init__.py  coordinator.py  signal.py
execution/risk/: __init__.py  capital_allocator.py  exposure_tracker.py  risk_manager.py
execution/runner/: __init__.py  candle_close_detector.py  live_strategy.py  live_strategy_refactored.py  trade_execution_pipeline.py
execution/simulator/: __init__.py  order_executor.py
execution/streaming/: candle_buffer.py
execution/tracking/: __init__.py  position_tracker.py
execution/websocket/: client.py  models.py
features/: __init__.py  base.py  engine.py
features/indicators/: __init__.py  momentum.py  moving_average.py  volatility.py  volume.py
models/: __init__.py  feature_schema.py  metadata.py  registry.py  utils.py
nailsage/: __init__.py
nailsage/config/: __init__.py  backtest.py  data.py  feature.py  risk.py  strategy.py
nailsage/data/: __init__.py  loader.py  validator.py
nailsage/execution/: __init__.py
nailsage/features/: __init__.py  engine.py
nailsage/models/: __init__.py
nailsage/utils/: __init__.py  config.py
portfolio/: __init__.py  coordinator.py  position.py
scripts/: check_paper_trading_stats.py  debug_kirby_messages.py  generate_data_metadata.py  migrate_arenas.py  optimize_hyperparameters.py  run_backtest.py  run_multi_strategy.py  run_paper_trading.py  run_sol_paper_trading.py  test_model_registry.py  test_signal_save.py  test_websocket_integration.py  train_model.py  validate_model.py  verify_imports.py
strategies/: __init__.py
targets/: __init__.py  classification.py
tests/: conftest.py
training/: __init__.py  backtest_pipeline.py  data_pipeline.py  pipeline.py  signal_pipeline.py  targets.py  validator.py
utils/: __init__.py  config.py  determinism.py  logger.py
validation/: __init__.py  backtest.py  time_series_split.py  walk_forward.py
(+52 files in other folders)
