[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nailsage"
version = "0.1.0"
description = "ML Trading Research Platform for Cryptocurrency Markets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NailSage Team"}
]
keywords = ["trading", "machine-learning", "cryptocurrency", "research", "backtesting"]

dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",  # For performance-critical operations
    "pyarrow>=14.0.0",  # Parquet support

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "imbalanced-learn>=0.11.0",  # Handle class imbalance

    # Technical indicators
    "ta-lib>=0.4.28",  # If available, otherwise we'll implement custom

    # Configuration management
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",  # Database migrations

    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.0",  # CLI tool
    "tqdm>=4.66.0",  # Progress bars
    "joblib>=1.3.0",  # Model serialization

    # Date/Time
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",  # Property-based testing

    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",

    # Type stubs
    "pandas-stubs>=2.0.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
]

visualization = [
    # Plotting and analysis
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "seaborn>=0.13.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
    "ipywidgets>=8.1.0",
]

exchange = [
    # Exchange APIs (for paper trading and eventual production)
    "ccxt>=4.1.0",  # Unified exchange API
    "websocket-client>=1.6.0",
]

all = [
    "nailsage[dev,visualization,exchange]",
]

[project.scripts]
nailsage = "nailsage.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nailsage*"]
exclude = ["tests*", "experiments*", "data*", "models*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=nailsage",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["nailsage"]
omit = [
    "*/tests/*",
    "*/experiments/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once we have good coverage
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
